# workhelix-cli-common

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  RELEASE.md  hooks.toml  justfile
.github/workflows/: ci.yml  publish.yml
src/: completions.rs  doctor.rs  lib.rs  license.rs  output.rs  types.rs  update.rs
