[package]
name = "workhelix-cli-common"
version = "0.2.3"
edition = "2024"
rust-version = "1.85.0"
license = "MIT"
description = "Common functionality for Workhelix Rust CLI tools"
repository = "https://github.com/tftio/workhelix-cli-common"
keywords = ["cli", "utilities", "workhelix"]
categories = ["command-line-utilities", "development-tools"]

[lints.rust]
unsafe_code = "warn"
missing_docs = "deny"

[lints.clippy]
# Deny common issues
enum_glob_use = "deny"
wildcard_imports = "deny"

# Allow only unavoidable Windows ecosystem duplicates
multiple_crate_versions = "allow"

# Quality checks - maximum aggression
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

[dependencies]
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
colored = "3.0"
is-terminal = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
tar = "0.4"
flate2 = "1.1"
tempfile = "3.23"
cargo-edit = "0.13.7"

[target.'cfg(target_os = "windows")'.dependencies]
zip = "6.0"

[dev-dependencies]
